# hikvision-isapi-wrapper

./: .gitignore  MANIFEST  README.md  listen.py  main.py  pyproject.toml  requirements.txt  setup.py
hikvision_isapi_wrapper/: __init__.py  event.py  fplib.py  person.py  response.py
hikvision_wrapper/: __init__.py  person.py  tools.py
tests/: test_fp_data.py  test_fp_lib.py  test_person.py
tests/vcr_cassettes/: fp-data-add.yml  fp-data-delete.yml  fp-data-update.yml  fplib-add.yml  fplib-delete.yml  fplib-list.yml  fplib-update.yml  person-add.yml  person-count.yml  person-delete.yml  person-search.yml  person-update.yml
